--- a/assets/scss/_app.scss
+++ b/assets/scss/_app.scss
@@ -48,6 +48,9 @@
   display: block;
   padding: 10px 3px 10px 10px;
   font-weight: 400;
+  p:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .mapboxgl-container {
